<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/transaction_similar_fragment_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?tink_backgroundColor">

  <include layout="@layout/tink_toolbar_default"/>

  <TextView
    android:id="@+id/description"
    style="@style/tink_hecto"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/tink_horizontal_margin"
    android:layout_marginTop="@dimen/tink_similar_transactions_header_padding"
    android:text="@string/tink_transaction_similar_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tink_toolbar"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintBottom_toTopOf="@id/doneBtn"
    app:layout_constraintTop_toBottomOf="@id/description"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/doneBtn"
    style="?attr/tink_containedButtonStyle"
    android:layout_width="match_parent"
    android:text="@string/tink_transaction_similar_button_accept_text"
    app:layout_constraintBottom_toTopOf="@id/skipBtn"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/skipBtn"
    style="?attr/tink_textButtonStyle"
    android:layout_width="match_parent"
    android:text="@string/tink_transaction_similar_button_skip_text"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>