<?xml version="1.0" encoding="utf-8"?>
<layout>
  <data>
    <variable
      name="viewModel"
      type="com.tink.pfmui.budgets.creation.specification.BudgetCreationSpecificationViewModel"/>
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/tink_backgroundColor">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/amountInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="@dimen/tink_horizontal_margin"
      android:hint="@string/tink_budget_create_field_amount_hint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amountInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.amountString}"
        android:textAppearance="@style/tink_hecto"
        app:addTextChangedListener="@{viewModel.amountTextWatcher}"
        app:keyListener="@{viewModel.amountInputKeyListener}"
        tools:text="3 000"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:id="@+id/averageAmountText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/tink_horizontal_margin"
      android:layout_marginEnd="@dimen/tink_horizontal_margin"
      android:text="@{viewModel.averageAmountText}"
      android:textAppearance="@style/tink_micro"
      android:visibility="@{viewModel.showAverageAmount}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/amountInputLayout"
      tools:text="Snitt 3 500 kr/mån"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/periodInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="@dimen/tink_horizontal_margin"
      android:hint="@string/tink_budget_create_field_period_hint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/averageAmountText">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/periodText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusableInTouchMode="false"
        android:text="@{viewModel.periodValueText}"
        android:textAppearance="@style/tink_hecto"
        tools:text="Egen"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/periodStartInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="@dimen/tink_horizontal_margin"
      android:hint="@string/tink_budget_create_field_period_start_hint"
      android:visibility="@{viewModel.showPeriodDateField}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/periodInputLayout">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/periodStartText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusableInTouchMode="false"
        android:textAppearance="@style/tink_hecto"
        android:text="@{viewModel.periodStartText}"
        tools:text="20 maj 2018"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/periodEndInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="@dimen/tink_horizontal_margin"
      android:hint="@string/tink_budget_create_field_period_end_hint"
      android:visibility="@{viewModel.showPeriodDateField}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/periodStartInputLayout">
      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/periodEndText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusableInTouchMode="false"
        android:textAppearance="@style/tink_hecto"
        android:text="@{viewModel.periodEndText}"
        tools:text="28 maj 2018"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/actionButton"
      style="?attr/tink_containedButtonStyle"
      android:layout_width="0dp"
      android:layout_height="@dimen/tink_button_height"
      android:enabled="@{!(viewModel.loading ?? false)}"
      android:onClick="@{view -> viewModel.onCreateBudgetButtonClicked()}"
      android:text="@{viewModel.isEditing ? @string/tink_budget_edit_button : @string/tink_budget_create_button}"
      android:transitionName="actionButton"
      android:visibility="@{viewModel.areAllRequiredValuesPresent}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/> <!--TODO: This should also take into account if we are just editing.-->

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:clickable="true"
      android:focusable="true"
      android:visibility="@{viewModel.loading}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="@{viewModel.loading}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>